--- a/src/main/resources/templates/listing.html
+++ b/src/main/resources/templates/listing.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html xmlns:th="http://www.thymeleaf.org">
 <head >
     <!-- Latest compiled and minified CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous"/>
@@ -15,17 +15,15 @@
 <div class="container">
     <h1>Dave's Listings</h1>
 </div>
-<form>
-    <div class="form-group">
-        <label for="exampleInputaddress1">Address</label>
-        <input type="text" class="form-control" id="exampleInputaddress1" placeholder="Address"/>
-    </div>
-    <div class="form-group">
-        <label for="exampleInputCity1">City</label>
-        <input type="text" class="form-control" id="exampleInputCity1" placeholder="City"/>
-    </div>
-    <input type="submit" value = "Submit"/>
-</form>
+<div th:each = "listing: ${listingList}">
+    <tr>
+        <td >  <a  th:utext = " ${listing.city+'&lt;br/&gt;' + listing.state} " height="80">Title  </a> </td>
+
+
+        <td th:text = "${listing.address} " height="80"> Time </td>
+    </tr>
+
+</div>
 </body>
 
 </html>
